--- a/Project/package.json
+++ b/Project/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.1.0",
     "react-native": "0.70.15",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
