--- a/Project/package.json
+++ b/Project/package.json
@@ -18,6 +18,7 @@
     "expo": "^50.0.14",
     "react": "18.1.0",
     "react-native": "0.70.15",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
